deploy/k8s/base/integration-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integration-gateway
  labels:
    app.kubernetes.io/name: integration-gateway
spec:
  selector:
    app.kubernetes.io/name: integration-gateway
    app.kubernetes.io/component: external-gateway
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
    - name: result-grpc
      port: 9443
      targetPort: result-grpc
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
